app/build/intermediates/cxx/Debug/1v5d6a4c/logs/x86/build_stdout_targets.txt
ninja: Entering directory `/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/.cxx/Debug/1v5d6a4c/x86'
[1/5] Building CXX object CMakeFiles/callbackhandler.dir/elf/elf_reader.cc.o
FAILED: CMakeFiles/callbackhandler.dir/elf/elf_reader.cc.o 
/Users/forevermeng/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=i686-none-linux-android29 --sysroot=/Users/forevermeng/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -Dcallbackhandler_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/callbackhandler.dir/elf/elf_reader.cc.o -MF CMakeFiles/callbackhandler.dir/elf/elf_reader.cc.o.d -o CMakeFiles/callbackhandler.dir/elf/elf_reader.cc.o -c /Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.cc
In file included from /Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.cc:5:
In file included from /Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:8:
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf.h:18:2: warning: #include_next in file found relative to primary source file or found by absolute path; will search from start of include path [-Winclude-next-absolute-path]
#include_next "elf.h"
 ^
In file included from /Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.cc:5:
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:14:14: error: unknown type name 'Elf32_Phdr'
using Phdr = Elf32_Phdr;
             ^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:27:11: error: unknown type name 'size_t'
constexpr size_t kMaxBuildIdStringLength = kSHA1Length * 2;
          ^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:27:44: error: use of undeclared identifier 'kSHA1Length'
constexpr size_t kMaxBuildIdStringLength = kSHA1Length * 2;
                                           ^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:29:1: error: unknown type name 'size_t'
size_t BASE_EXPORT ReadElfBuildId(const void* elf_mapped_base,
^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:29:19: error: expected ';' after top level declarator
size_t BASE_EXPORT ReadElfBuildId(const void* elf_mapped_base,
                  ^
                  ;
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:35:1: error: use of undeclared identifier 'absl'
absl::optional<StringPiece> BASE_EXPORT
^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:35:16: error: use of undeclared identifier 'StringPiece'
absl::optional<StringPiece> BASE_EXPORT
               ^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:35:40: error: expected ';' after top level declarator
absl::optional<StringPiece> BASE_EXPORT
                                       ^
                                       ;
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:40:12: error: unknown type name 'Phdr'
span<const Phdr> BASE_EXPORT GetElfProgramHeaders(const void* elf_mapped_base);
           ^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:40:29: error: expected ';' after top level declarator
span<const Phdr> BASE_EXPORT GetElfProgramHeaders(const void* elf_mapped_base);
                            ^
                            ;
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:45:1: error: unknown type name 'size_t'
size_t BASE_EXPORT GetRelocationOffset(const void* elf_mapped_base);
^
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.h:45:19: error: expected ';' after top level declarator
size_t BASE_EXPORT GetRelocationOffset(const void* elf_mapped_base);
                  ^
                  ;
/Users/forevermeng/AndroidStudioProjects/CallbackHandler/app/src/main/cpp/elf/elf_reader.cc:11:10: fatal error: 'base/bits.h' file not found
#include "base/bits.h"
         ^~~~~~~~~~~~~
1 warning and 13 errors generated.
[2/5] Building CXX object CMakeFiles/chromium_android_linker.dir/linker_jni_onload.cc.o
[3/5] Building CXX object CMakeFiles/chromium_android_linker.dir/linker_jni.cc.o
ninja: build stopped: subcommand failed.
